tests/run/error_mixed_arith.out
tests/run/error_mixed_arith.em:3:12: error: arithmetic operands must be the same numeric type (or both string for '+')
